[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/holy goblin yellow and pink.png" type="Texture" id=1]
[ext_resource path="res://HitBoxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Effects/FlashWhite.shader" type="Shader" id=4]
[ext_resource path="res://Effects/BlinkAnimationPlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/Goblin.gd" type="Script" id=6]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 4 )
shader_param/active = false

[sub_resource type="Animation" id=1]
resource_name = "summon"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "fire"
} ]
}

[sub_resource type="Animation" id=2]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 0, 9, 0 ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 3.27978
height = 5.88675

[sub_resource type="CapsuleShape2D" id=4]
radius = 11.7791
height = 1.13563

[sub_resource type="CircleShape2D" id=6]
radius = 154.978

[node name="Goblin" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 4
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 5 )
texture = ExtResource( 1 )
vframes = 3
hframes = 4
frame = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/summon = SubResource( 1 )
anims/walk = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 11.977 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 3 )]

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 5.736 )
shape = SubResource( 4 )

[node name="BlinkAnimationPlayer" parent="." instance=ExtResource( 5 )]

[node name="PlayerDetectionZone" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
shape = SubResource( 6 )

[node name="FirePoint" type="Position2D" parent="."]
position = Vector2( 0, -10.692 )

[node name="PlayerCast" type="RayCast2D" parent="FirePoint"]
enabled = true
exclude_parent = false
collision_mask = 11

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]

[editable path="Hurtbox"]
